修改了personbasicinfo index 的search 框 来匹配department的加入和personbasicinfo 外键的department

--- a/HRsystem.csproj
+++ b/HRsystem.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <Folder Include="Pages\Departments\" />
+    <Folder Include="Pages\Person\PAR\" />
+    <Folder Include="Pages\Person\Trainning\" />
   </ItemGroup>
 
 </Project>
