--- a/HRsystem.csproj
+++ b/HRsystem.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\next\" />
     <Folder Include="Pages\Person\PAR\" />
     <Folder Include="Pages\Person\Trainning\" />
   </ItemGroup>
