完成 traininginfo的相关工作，标志着程序的彻底完成。现逐渐完善

--- a/HRsystem.csproj
+++ b/HRsystem.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Folder Include="Pages\Person\PAR\" />
     <Folder Include="Pages\Person\Trainning\" />
+    <Folder Include="Pages\RewardingAndPunishment\" />
   </ItemGroup>
 
 </Project>
